# PI_PICO_MQTT_SIM

./: CMakeLists.txt  ExplanationSMSConfig.drawio  ExplanationSMSConfigdrawio.drawio  README.md  configure.c  configure.h  main.c  password.c  password.h  pico_library.c  pico_library.h  testmain.c  uartRingBuffer.c  uartRingBuffer.h
